--- a/sale.html
+++ b/sale.html
@@ -1116,7 +1116,7 @@
   "<div class='txt-left-100'>ประเภท : เงินสด</div>"+
   "<div class='txt-left-100'>เลขที่บิล :  S81001525 </div>"+
   "<div class='txt-left' style='letter-spacing: -0.5px;'>วันที่ขาย : 2018-12-09</div>"+
-  "<div class='txt-right' style="margin-bottom: 5px;">เวลา : 13:02:00</div>"+
+  "<div class='txt-right' style='margin-bottom: 5px;'>เวลา : 13:02:00</div>"+
   
   "<hr style='width: 90%; border-top: 1px dashed; border-bottom: none;'>"+
   "<div class='left'>รายการ</div> <div class='mid'>จำนวน</div> <div class='right'>ราคา</div>"+
