--- a/sale.html
+++ b/sale.html
@@ -1120,6 +1120,7 @@
   
   "<hr style='width: 90%; border-top: 1px dashed; border-bottom: none;'>"+
   "<div class='left'>รายการ</div> <div class='mid'>จำนวน</div> <div class='right'>ราคา</div>"+
+  ""+text+""+
   "<hr style='width: 90%; border-top: 5px; border-top: 1px dashed; border-bottom: none;'>"+
   "<div class='txt-left'>ราคารวม : </div>"+
   "<div class='txt-right'>200 บาท</div><br>"+
