--- a/sale.html
+++ b/sale.html
@@ -1072,7 +1072,8 @@
           json.push(item);
           no++;
 
-        text = text + "<div class='left'>"+jsonObj[i].name+"("+jsonObj[i].price+")</div>" + "<div class='mid'>"+jsonObj[i].amount+"</div>" + "<div class='right'>"+jsonObj[i].price+"</div>";
+        net_prod = jsonObj[i].price * jsonObj[i].amount;
+        text = text + "<div class='left'>"+jsonObj[i].name+"("+jsonObj[i].price+")</div>" + "<div class='mid'>"+jsonObj[i].amount+"</div>" + "<div class='right'>"+net_prod+"</div>";
         });
         var jsonString = JSON.stringify(json);
         var print = $('input[name=print-radio]:checked').val();
@@ -1105,33 +1106,33 @@
                     var date = datetime.split(" ");
                     var time = date[1];
                     var date = date[0];
-                    WinPrint.document.write("<style>@page {size: auto; margin: 0mm;} .txt-right{ margin-right: 0.5cm; font-size: 1em; text-align:right; float: right; } .txt-left{ font-size: 1em; margin-left: 0.5cm; float: left; width: 50%; }.txt-left-100{ font-size: 1em; margin-left: 0.5cm; float: left; width: 100%; } .txt-ct{ float: center; font-size: 1em; text-align: center; margin-bottom: 0.2em} .left{margin-left: 0.5cm; float: left; width: 3.5cm; text-align: left;} .mid{float: left; width: 0.5cm; text-align: center;} .right{margin-right: 0.5cm; float: left; width: 2.5cm;  text-align: right;}</style>"+
+                    WinPrint.document.write("<style>@page {size: auto; margin: 0mm;} .txt-right{ margin-right: 0.5cm; font-size: 1em; text-align:right; float: right; } .txt-left{ font-size: 1em; margin-left: 0.5cm; float: left; width: 50%; }.txt-left-100{ font-size: 1em; margin-left: 0.5cm; float: left; width: 100%; } .txt-ct{ float: center; font-size: 1em; text-align: center; margin-bottom: 0.2em} .left{margin-left: 0.5cm; float: left; width: 3.5cm; text-align: left;} .mid{float: left; width: 0.5cm; text-align: right;} .right{margin-right: 0.5cm; float: left; width: 2.5cm;  text-align: right;}</style>"+
 "<div style='width: 7.5cm;'>"+
   "<div class='txt-ct'>พรประสิทธิ์</div>"+
   "<div class='txt-ct'>PPS AUTO</div>"+
   "<div class='txt-ct'>5 ม.7 ต.ชีน้ำร้าย อ.อินทร์บุรี สิงห์บุรี</div>"+
   "<div class='txt-ct'>โทร. 065-5028828 , 097-0631169</div>"+
   "<div class='txt-ct' style='font-weight: bold; margin-top: 1em;'>ใบเสร็จรับเงิน</div>"+
-  "<div class='txt-left-100'>ลูกค้า : pps พรประสิทธิ์</div>"+
-  "<div class='txt-left-100'>ประเภท : เงินสด</div>"+
-  "<div class='txt-left-100'>เลขที่บิล :  S81001525 </div>"+
-  "<div class='txt-left' style='letter-spacing: -0.5px;'>วันที่ขาย : 2018-12-09</div>"+
-  "<div class='txt-right' style='margin-bottom: 5px;'>เวลา : 13:02:00</div>"+
+  "<div class='txt-left-100'>ลูกค้า : "+cus_name+"</div>"+
+  "<div class='txt-left-100'>ประเภท : "+pay_type+"</div>"+
+  "<div class='txt-left-100'>เลขที่บิล :  "+data+" </div>"+
+  "<div class='txt-left' style='letter-spacing: -0.5px;'>วันที่ขาย : "+date+"</div>"+
+  "<div class='txt-right' style='margin-bottom: 5px;'>เวลา : "+time+"</div>"+
   
   "<hr style='width: 90%; border-top: 1px dashed; border-bottom: none;'>"+
   "<div class='left'>รายการ</div> <div class='mid'>จำนวน</div> <div class='right'>ราคา</div>"+
   ""+text+""+
   "<hr style='width: 90%; border-top: 5px; border-top: 1px dashed; border-bottom: none;'>"+
   "<div class='txt-left'>ราคารวม : </div>"+
-  "<div class='txt-right'>200 บาท</div><br>"+
+  "<div class='txt-right'>"+sum_price+" บาท</div><br>"+
   "<div class='txt-left'>ส่วนลด : </div>"+
-  "<div class='txt-right'>50 บาท</div><br>"+
+  "<div class='txt-right'>"+discount+" บาท</div><br>"+
   "<div class='txt-left'>สุทธิ : </div>"+
-  "<div class='txt-right'>150 บาท</div><br><br>"+
+  "<div class='txt-right'>"+final_price+" บาท</div><br><br>"+
   "<div class='txt-ct' style='margin-bottom: 0.5em;'>ขอบคุณที่ใช้บริการ</div>"+
-  "<div class='txt-left-100'>พนักงานขาย : ซูซี้ </div>"+
-  "<div class='txt-left'>รับเงิน : 200 บาท</div>"+
-  "<div class='txt-right'>ทอน : 50 บาท</div>"+
+  "<div class='txt-left-100'>พนักงานขาย : "+localStorage.name+"</div>"+
+  "<div class='txt-left'>รับเงิน : "+get_money+" บาท</div>"+
+  "<div class='txt-right'>ทอน : "+change_money+" บาท</div>"+
 "</div>");
                     WinPrint.document.close();
                     WinPrint.focus();
