print type pay type

--- a/sale.html
+++ b/sale.html
@@ -75,8 +75,17 @@
               $("#print-title").text("ไม่พิมพ์ ");
               $("#print-title").append(text_html);
             } else if (checked == "print") {
-              $("#print-title").text("พิมพ์ ");
-              $("#print-title").append(text_html);
+              $('input[name=print-option]').each(function () {
+                if ($(this).is(":checked")) {
+                  check = $(this).val();
+                  if(check == "bill"){
+                    $("#print-title").text("ใบเสร็จ ");
+                  }else{
+                    $("#print-title").text("ใบรายการขาย ");
+                  }
+                  $("#print-title").append(text_html);
+                }
+              });
             }
           }
         });
@@ -84,19 +93,20 @@
 
       function set_pay_title() {
         text_html = "<span><i class='fa fa-money'></i></span>";
+        text_print = "<span><i class='fa fa-print'></i></span>";
           $('input[name=pay-radio]').each(function () {
             if ($(this).is(":checked")) {
               checked = $(this).val();
               if (checked == "เงินสด") {
                 $("#pay-title").text("เงินสด ");
-                $("#pay-title").append(text_html);
+                $("#print-title").text("ใบเสร็จ ");
               }else if (checked == "เงินโอน") {
                 $("#pay-title").text("เงินโอน ");
-                $("#pay-title").append(text_html);
+                $("#print-title").text("ใบเสร็จ ");
               }else if (checked == "ลูกหนี้") {
                 $("#pay-title").text("ลูกหนี้ ");
-                $("#pay-title").append(text_html);
-              }
+                $("#print-title").text("ใบรายการขาย ");
+              } $("#pay-title").append(text_html); $("#print-title").append(text_print); 
             }
           });
         }
@@ -252,7 +262,7 @@
           <div class="col-3 text-right" style="padding-top: 10px;">
             <div class="input-group">
               <button id="btn_checkbill" class="btn btn-danger" style="text-align: center; margin-right: 50%;" data-toggle="modal" data-target="#myModal" onclick="check_bill()">คิดเงิน</button>
-              <button id="print-title" class="btn btn-info" style="text-align: center; margin-right: 5%;" data-toggle="modal" data-target="#printModal">พิมพ์
+              <button id="print-title" class="btn btn-info" style="text-align: center; margin-right: 5%;" data-toggle="modal" data-target="#printModal">ใบเสร็จ
                 <span>
                   <i class="fa fa-print"></i>
                 </span>
@@ -359,7 +369,16 @@
                   <input type="radio" name="print-radio" value="print" checked>พิมพ์</label>
                 <label class="radio-inline" style="font-size: 120%;">
                   <input type="radio" name="print-radio" value="no">ไม่พิมพ์</label>
-              </div><br> <br>
+              </div>
+              <div id="print-option-title" class="col-12 text-center">
+                <h5 style="text-decoration: underline;">ตัวเลือก</h5>
+              </div>
+              <div id="print-option" class="col-12 text-center">
+                <label class="radio-inline" style="font-size: 120%;">
+                  <input id="bill" type="radio" name="print-option" value="bill" checked>ใบเสร็จ</label>
+                <label class="radio-inline" style="font-size: 120%;">
+                  <input id="a4" type="radio" name="print-option" value="a4">ใบรายการขาย(A4)</label>
+              </div><br>
               <!-- Modal footer -->
               <div class="col-12 text-center">
                 <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="set_print_title();">บันทึก</button>
@@ -411,12 +430,17 @@
     <script>
       $('input:radio[name="pay-radio"]').change(
           function () {
+            text_html = "<span><i class='fa fa-print'></i></span>";
             if ($(this).is(':checked') && $(this).val() == "เงินโอน") {
               $('textarea').prop('disabled', false);
+              $("#bill").prop("checked", true);
             }else if ($(this).is(':checked') && $(this).val() == "ลูกหนี้") {
               $('textarea').prop('disabled', false);
+              $("#bill").prop("checked", false);
+              $("#a4").prop("checked", true);
             }else if ($(this).is(':checked') && $(this).val() == "เงินสด") {
               $('textarea').prop('disabled', true);
+              $("#bill").prop("checked", true);
               $('textarea').val("");
             }
       });
@@ -500,7 +524,7 @@
           content: "กรุณาเข้าสู่ระบบก่อน"
         });
         window.location = "login.html";
-      } 
+      }
         //Scroll
         $("#show_list_add").scroll(function() {
           console.log("Scroll");
@@ -1077,6 +1101,7 @@
         });
         var jsonString = JSON.stringify(json);
         var print = $('input[name=print-radio]:checked').val();
+        var print_type = $('input[name=print-option]:checked').val();
         var pay_type = $('input[name=pay-radio]:checked').val();
         var comment = $('textarea').val();
         var b_id = $('#branch option:selected').val();
@@ -1091,9 +1116,8 @@
         + "&pay=" + pay_type + "&dis=" + discount + "&get_money=" + get_money + "&change_money=" + change_money + "&final_price=" 
         + final_price + "&comment=" + comment + "&name_cus=" + cus_name + "&user_id=" + localStorage.user_id;
         
-        if(print == "print"){
+        if(print == "print" && print_type == "bill"){
           var WinPrint  = window.open('', '', 'left=0,top=0,width=1300,height=600,toolbar=0,scrollbars=0,status=0');
-        }
         $.ajax({
             type: "POST",
             url:"http://150.95.26.163:8080/gitmew/php/save_order.php",
@@ -1173,6 +1197,20 @@
       localStorage.user_id = "";
       window.location = "login.html";
     }
+
+    $('input:radio[name="print-radio"]').change(
+        function(){
+          if ($(this).is(':checked')) {
+            checked = $(this).val();
+            if(checked == "print"){
+              $("#print-option").prop('hidden', false);
+              $("#print-option-title").prop('hidden', false);
+            }else if(checked == "no"){
+              $("#print-option").prop('hidden', true);
+              $("#print-option-title").prop('hidden', true);
+            }
+        }
+      }); // show / hide bill-option;
     </script>
 </body>
 </html>
