--- a/clone_sale.html
+++ b/clone_sale.html
@@ -566,10 +566,11 @@
 
         var options = {
         url: function(phrase) {
-          return "http://150.95.26.163:8080/gitmew/php/search.php?cus_id="+cus_id;
+          return "http://150.95.26.163:8080/gitmew/php/clone_search.php?cus_id="+cus_id;
         },
-        getValue: function(element) {     
-          return element.prod_name;
+        getValue: function(element) {
+          console.log(element);                     
+          return element.prod_name;               
         },
         ajaxSettings: {
           method: "POST",
@@ -600,7 +601,7 @@
             hideAnimation: {
                 type: "slide",
                 time: 100
-            },
+            },           
             onChooseEvent: function() {
               var barcode = $("#name").getSelectedItemData().barcode;
               price = $("#name").getSelectedItemData().prod_price;
